--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a href="#">Blog</a>
                         </li>
                         <li>
-                            <a href="#">Shop</a>
+                            <a href="#">Auction Results</a>
                         </li>
                         <li>
                             <a href="#">Services</a>
