--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                             <a href="#">About us</a>
                             <a href="#">Products</a>
                             
-                            <a href="#">Shop</a>
+                            <a href="#">Auction Results</a>
                             
-                            <a href="#">Gallery</a>
+                            <a href="#">Blog</a>
                             <a href="#">Contact us</a>
                         </div>
                     </div>
